@@ -14,6 +14,9 @@
 
 2006-12-21 Werner Hoch <werner.ho@gmx.de>
 
+	* src/x_dialog.c: use GtkDialog for the find text, the show text and
+	  the hide text dialog. Code cleanups.
+
 	* src/x_autonumber.c: fixed o_selection_remove call which caused 
 	  gschem to crash. suggestion by Ales, patch from Peter Brett.
 
